--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "yookassa": "^2.7.0",
+    "@a2seven/yoo-checkout": "^1.1.4",
     "uuid": "^9.0.0",
     "sqlite3": "^5.1.6",
     "pg": "^8.11.3"
